[build-system]
requires = [
    "setuptools >= 61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "panda3d-gltf"
dynamic = ["version"]
authors = [
    {name = "Mitchell Stokes"},
]
description = "glTF utilities for Panda3D"
readme = "README.md"
keywords = ["panda3d", "gltf"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "panda3d >= 1.10.8",
    "panda3d-simplepbr >= 0.6",
]
requires-python = ">= 3.8"

[project.urls]
homepage = "https://github.com/Moguri/panda3d-gltf"

[project.optional-dependencies]
test = ["pytest", "pylint~=2.5.0", "pytest-pylint"]

[project.scripts]
gltf2bam = "gltf.cli:main"

[project.gui-scripts]
gltf-viewer = "gltf.viewer:main"

[project.entry-points."panda3d.loaders"]
gltf = "gltf._loader:GltfLoader"
glb = "gltf._loader:GltfLoader"

[tool.setuptools]
packages = ["gltf"]

[tool.setuptools.dynamic]
version = {attr = "gltf.version.__version__"}

[tool.pytest.ini_options]
addopts = "--pylint"
