[metadata]
name = panda3d-gltf
author = Mitchell Stokes
home_page = https://github.com/Moguri/panda3d-gltf
description = glTF utilities for Panda3D
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true

[global]
verbose = 0

[aliases]
test = pytest

[tool:pytest]
addopts = --pylint
