[metadata]
name = panda3d-glTF
version = 0.7
author = Mitchell Stokes
home_page = https://github.com/Moguri/panda3d-gltf
description = glTF utilities for Panda3D
keywords = panda3d, gltf
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = gltf
python_requires = >=3.6
install_requires =
    panda3d >= 1.10.8
    panda3d-simplepbr >= 0.6
    importlib-metadata >= 1.0 ; python_version < "3.8"

[options.entry_points]
console_scripts =
    gltf2bam = gltf.cli:main
gui_scripts =
    gltf-viewer = gltf.viewer:main
panda3d.loaders =
    gltf = gltf.loader:GltfLoader
    glb = gltf.loader:GltfLoader

[global]
verbose = 0

[aliases]
test = pytest

[tool:pytest]
addopts = --pylint
