[metadata]
name = panda3d-gltf
version = attr:gltf.version.__version__
author = Mitchell Stokes
description = glTF utilities for Panda3D
long-description = file: README.md
long-description-content-type = text/markdown
keywords = panda3d, gltf
license = MIT
license-file = LICENSE.txt
url = https://github.com/Moguri/panda3d-gltf
project_urls =
    Bug Tracker = https://github.com/Moguri/panda3d-gltf/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
install_requires =
    panda3d >= 1.10.8
    panda3d-simplepbr >= 0.6
python_requires = >=3.9

[options.extras_require]
test =
    pytest
    pylint ~= 2.5.0
    pytest-pylint

[options.entry_points]
console_scripts =
    gltf2bam = gltf.cli:main
gui_scripts =
    gltf-viewer = gltf.viewer:main
panda3d.loaders =
    gltf = gltf.loader:GltfLoader
    glb = gltf.loader:GltfLoader

[global]
verbose=0

[tool:pytest]
addopts = --pylint
